# angle-sc-rs

./: CONTRIBUTING.md  Cargo.toml  README.md
docs/uml/: angle_class_diagram.puml
src/: lib.rs  trig.rs
