[package]
name = "angle-sc"
version = "1.1.2"
authors = ["Ken Barker <ken.barker@via-technology.aero>"]
description = "A Rust library for performing accurate and efficient trigonometry calculations."
documentation = "https://docs.rs/angle-sc/"
homepage = "https://github.com/kenba/angle-sc-rs"
repository = "https://github.com/kenba/angle-sc-rs"
readme = "README.md"
keywords = ["geometry", "trigonometry", "angle", "degrees", "radians"]
categories = ["mathematics", "no-std"]
license = "MIT"
edition = "2024"

[dependencies]
libm = "0.2"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
nursery = "deny"
pedantic = "deny"
unwrap_used = "deny"
